* fixed displaing buttons in header on mobile screens * refactored integrations layout and applied changes for mobile screens

--- a/client/styles/layout/_body.scss
+++ b/client/styles/layout/_body.scss
@@ -749,7 +749,7 @@ pre.code:after{
 }
 
 .large-card-content {
-    min-height: 500px !important;
+    min-height: 500px;
 }
 
 div.code {
@@ -2849,7 +2849,7 @@ $light-inprogress: #68c9fd;
                             }
 
                             &._dashboard {
-                                display: none !important; //TODO: find who add inline styles
+                                display: none !important; //TODO: find who adds inline styles
                             }
                         }
                     }
